tests/ui/traits/non_lifetime_binders/drop-impl-pred.no.stderr
error[E0367]: `Drop` impl requires `H: Foo` but the struct it is implemented for does not
  --> $DIR/drop-impl-pred.rs:18:15
   |
LL |     for<H> H: Foo,
   |               ^^^
   |
note: the implementor must specify the same requirement
  --> $DIR/drop-impl-pred.rs:11:1
   |
LL | struct Bar<T>(T) where T: Foo;
   | ^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0367`.
